--- a/todo_list.css
+++ b/todo_list.css
@@ -46,6 +46,14 @@ body, html {
     background: rgba(255, 127, 80, 0.7);
 }
 
+.window_dark_mode .todo_content::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.15);
+}
+
+.window_dark_mode .todo_content::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.3) !important;
+}
+
 .todo_top_bar {
     display: flex;
     justify-content: space-between;
@@ -54,6 +62,10 @@ body, html {
     height: 4.5vmin;
     width: 100%;
     border-bottom: 0.0625rem solid rgba(255, 127, 80, 0.35);
+}
+
+.todo_top_bar_dark_mode {
+    border-bottom: 0.0625rem solid rgba(35, 25, 50, 0.15) !important;
 }
 
 .todo_top_bar label {
@@ -84,6 +96,12 @@ body, html {
     box-shadow: 0 0 0.8vmin rgba(255, 127, 80, 0.4);
 }
 
+.window_dark_mode .todo_top_bar_add_name:focus {
+    border-color: #231932 !important;
+    background: rgba(0, 0, 0, 0.6) !important;
+    box-shadow: 0 0 0.8vmin rgba(74, 65, 71, 0.6) !important;
+}
+
 .todo_top_bar_add_name::placeholder {
     color: rgba(255, 255, 255, 0.4);
 }
@@ -102,6 +120,10 @@ body, html {
     transition: all 0.2s ease-in-out;
 }
 
+.window_dark_mode .todo_top_bar_add_button {
+    background: linear-gradient(90deg, #231932, #0d091e) !important;
+}
+
 .todo_top_bar_add_button::before {
     content: "+";
     color: white;
@@ -111,8 +133,13 @@ body, html {
 
 .todo_top_bar_add_button:hover {
     transform: translateY(-0.1vmin);
-    box-shadow: 0 0.5vmin 1vmin rgba(255, 127, 80, 0.4);
+    box-shadow: 0 0.5vmin 1vmin rgba(35, 25, 50, 0.4);
     filter: brightness(1.15);
+}
+
+.window_dark_mode .todo_top_bar_add_button:hover {
+    box-shadow: 0 0.5vmin 1vmin rgba(92, 44, 77, 0.4) !important;
+    filter: brightness(0.85) !important;
 }
 
 .todo_top_bar_add_button:active {
@@ -130,6 +157,10 @@ body, html {
     border-bottom: 0.0625rem solid rgba(255, 127, 80, 0.15);
     background-color: rgba(255, 255, 255, 0.02);
     transition: all 0.2s ease;
+}
+
+.todo_list_task_dark_mode {
+    border-bottom: 0.0625rem solid rgba(35, 25, 50, 0.15) !important;
 }
 
 .todo_list_task:hover {
@@ -177,6 +208,11 @@ body, html {
     transform: scale(1.15);
     border-color: #38ef7d;
     background-color: rgba(56, 239, 125, 0.2);
+}
+
+.window_dark_mode .todo_list_item_complete:hover {
+    border-color: #2e7d32 !important;
+    background-color: rgba(46, 125, 50, 0.2) !important;
 }
 
 .todo_list_item_name {
